# cursor_bazel_demo

./: .bazelrc  .clang-format  .clangd  .gitignore  BUILD.bazel  CLANGD_CONFIG.md  MODULE.bazel  README.md  VSCODE_SETUP.md  verify_setup.sh
lib/: BUILD.bazel  JSON_LIB_USAGE.md  hello.cpp  hello.h  json.cpp  json.h
main/: BUILD.bazel  json_demo.cpp  main.cpp
test/: BUILD.bazel  hello_test.cpp  json_test.cpp
